# r3malloc

./: .gitignore  Cargo.toml  README.md
perf_tests/: Makefile  run_threadtest.sh  threadtest-single.sh  threadtest.csv  threadtest_test
perf_tests/benchmark/: AllocatorMacro.hpp  fred.h  threadtest.cpp  timer.h
src/: apf.rs  defines.rs  heap.rs  lib.rs  lock.rs  log.rs  main.rs  pagemap.rs  pages.rs  prototype_linked_list.rs  r3malloc.rs  size_classes.rs  tcache.rs  thread_hook.h
tests/: Makefile  dummy.c  malloc_runs.c  malloc_usable_size_runs.c  multiple_threads.c  posix_memalign_runs.c  prototype.c
tests/apf/: Makefile  alloc_free.c  example_pattern  example_pattern.c  multiple_sc.c  sawtooth  sawtooth.c
tests/concurrency/: Makefile  different_size_class  different_size_class.c  same_size_class  same_size_class.c
tests/unit_tests/: Makefile  calloc_runs.c  free_runs.c  realloc_runs.c
