[package]
name = "r3malloc"
version = "0.1.0"
edition = "2021"
authors = ["Pavlo Pastaryev <p.pastaryev@gmail.com>"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
atomic = "0.5"
libc = "0.2"
libc-print = "0.1.17"
likely_stable = "0.1.2"
c2rust-bitfields = { version = "0.3.0", features = ["no_std"] }

[features]
all_windows = []

# Both profile.dev and profile.release panic configs are needed because of no_std

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
